# verune

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  cliff.toml  default.nix  justfile  shell.nix
.zed/: tasks.json
libver/: CHANGELOG.md  Cargo.toml  README.md
libver/src/: lib.rs
ruleport/: Cargo.toml  SPECIFICATION.adoc
ruleport/src/: error.rs  lib.rs  ser.rs
src/: main.rs
verstring/: Cargo.toml
verstring/src/: main.rs
verune/: Cargo.toml
verune/src/: main.rs
