[workspace]
members = ["libver"]
resolver = "3"

[package]
name = "verune"
version = "0.4.0"
description = "Dead simple, generic runtime version manager"
edition = "2024"
keywords = ["version", "development", "cli", "runtime"]
categories = ["command-line-utilities", "config", "development-tools"]
license = "MIT OR Apache-2.0"
authors = ["r6915ee <astergthefourth@gmail.com>"]
homepage = "https://codeberg.org/r6915ee/verune"
repository = "https://codeberg.org/r6915ee/verune"

[dependencies]
clap = { version = "4.5.53", features = ["cargo"] }
libver = { version = "0.3.1", path = "./libver" }
ron = "0.12.0"
